--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "easymde": "^2.18.0",
     "lucide-react": "^0.446.0",
     "markdown-it": "^14.1.0",
-    "next": "15.0.0-rc.0",
+    "next": "^15.0.0-canary.177",
     "next-auth": "^5.0.0-beta.22",
     "next-sanity": "^9.5.1-canary.23",
     "react": "19.0.0-rc-f994737d14-20240522",
