--- a/package.json
+++ b/package.json
@@ -24,11 +24,11 @@
     "easymde": "^2.18.0",
     "lucide-react": "^0.446.0",
     "markdown-it": "^14.1.0",
-    "next": "^15.0.0-canary.177",
+    "next": "^15.0.0-canary.183",
     "next-auth": "^5.0.0-beta.22",
     "next-sanity": "^9.5.1-canary.23",
-    "react": "19.0.0-rc-f994737d14-20240522",
-    "react-dom": "19.0.0-rc-f994737d14-20240522",
+    "react": "^19.0.0-rc-09111202-20241011",
+    "react-dom": "^19.0.0-rc-09111202-20241011",
     "sanity": "^3.58.0",
     "sanity-plugin-markdown": "^5.0.0",
     "slugify": "^1.6.6",
@@ -43,7 +43,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "15.0.0-rc.0",
+    "eslint-config-next": "^15.0.0-rc.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
